Updated to Cassandra 1.2.9 and Kundera 2.8.
Signed-off-by: Paulo Pires <pjpires@gmail.com>