@@ -89,7 +89,7 @@
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.2.3</version>
+        <version>2.2.4</version>
       </dependency>
       <dependency>
         <groupId>joda-time</groupId>
@@ -100,7 +100,7 @@
       <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
-        <version>6.7</version>
+        <version>6.8.5</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -160,15 +160,6 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>aspectj-maven-plugin</artifactId>
-          <version>1.4</version>
-          <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-          </configuration>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>2.5</version>
@@ -186,15 +177,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.14.1</version>
-          <configuration>
-            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-            <threadCount>1</threadCount>
-            <parallel>true</parallel>
-            <includes>
-              <include>**/SetupTestSuite.java</include>
-              <include>**/*Test.java</include>
-            </includes>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
